--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,13 +1,3 @@
-section {
-	margin: 0 auto;
-	max-width: 48rem;
-	width: 90%;
-}
-
-ul {
-	list-style-type: none;
-}
-
 *, *:before, *:after {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -15,23 +5,47 @@ ul {
 }
 
 html{
-  background:#e6e6e6;
+  background:#EAEEE7;
 }
+
+section {
+	margin: 0 auto;
+	max-width: 48rem;
+	width: 90%;
+	background: #514E50;
+	border: 1px solid #514E50;
+}
+
+ul {
+	list-style-type: none;
+	text-align: center;
+	li{
+
+	}
+}
+
 
 .wrap{
   width:80%;
   margin: 2.6em auto 0 auto;
 }
 
+.link {
+	text-decoration: underline;
+}
+
 .module{
 	width:20%;
 	height:15em;
-	float: left;
+	// float: left;
+	display: inline-block;
 	margin: 0 0 2.6em 6.6%;
 	position: relative;
 	background: #fff;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
 	text-align: center;
+	vertical-align: top;
+	padding: 10px;
 }
 
 .module:first-child{
@@ -74,4 +88,24 @@ html{
 @keyframes cascade{
 	from {bottom:-50px; transform: scale(0.8); opacity:0;}
 	to {bottom:0px; transform: scale(1); opacity:1;}
+}
+
+.group:before,
+.group:after {
+    content: "";
+    display: table;
+} 
+.group:after {
+    clear: both;
+}
+.group {
+    zoom: 1; /* For IE 6/7 (trigger hasLayout) */
+}
+header{
+	background: #BCAAC2;
+	color: #EAEEE7;
+	&.crumbs{
+		padding:10px;
+		text-align: center;
+	}
 }
