--- a/app/templates/accordion.html
+++ b/app/templates/accordion.html
@@ -1,7 +1,7 @@
 <div class="group">
 	<header class="crumbs">
-		<span class="link" ng-click="getGenres()">{{selectedItem.genre.name}} ></span>
-		<span class="link" ng-click="getAuthors()"">{{selectedItem.author.name}} ></span> 
+		<span class="link" ng-click="getGenres()">{{selectedItem.genre.name}} </span> >
+		<span class="link" ng-click="getAuthors()"">{{selectedItem.author.name}} </span> > 
 		<span class="link">{{selectedItem.book.name}}</span>
 	</header>
 	<ul list-directive="genre" class="row group">
