--- a/app/templates/accordion.html
+++ b/app/templates/accordion.html
@@ -4,6 +4,5 @@
 		<span class="link" ng-click="getAuthors()"">{{selectedItem.author.name}} </span> > 
 		<span class="link">{{selectedItem.book.name}}</span>
 	</header>
-	<ul list-directive="genre" class="row group">
-	</ul>
+	<ul list-directive="genre" class="row group"></ul>
 </div>
